
Empty error_log, mirror_metadata, extended_attribute, and
access_control_lists files will no longer be gzipped (suggestion by
Hans F. Nordhaug).

Fix for restoring files in directories with really long names.

Added supplementary rdiff-backup-statistics utility for parsing
rdiff-backup's statistics files (originally based off perl script by
Dean Gaudet).


New in v1.1.4 (2005/12/13)
--------------------------

Quoting should be enabled only as needed between case-sensitive and
non-case-sensitive systems (thanks for Andrew Ferguson for report).

Files with ACLs will not be unnecessarily marked as changed (bug
report by Carsten Lorenz).

Fix for common KeyError bug introduced in v1.1.3.


New in v1.1.3 (2005/11/25)
--------------------------

Regression metadata bug introduced with 1.1.1/1.1.2 fixed.

rdiff-backup should now give a clean error message (no stack traces!)
when aborted with control-C, killed with a signal, or when the
connection is lost.

When removing older than, delete empty increments directories

Long filename bug finally fixed (phew).  rdiff-backup should now
correctly mirror any file that it can read.

Due to very detailed error report from Yoav, fixed a "Directory not
empty" error that can arise on emulated filesystems like NFS and
EncFS.

Cleaned up remove older than report, and also stopped it from deleting
current data files if you specify a time later than the current
mirror.


New in v1.1.2 (2005/11/06)
--------------------------

This version corrects a packaging error in v1.1.1, which was totally
broken.


New in v1.1.1 (2005/11/05)
--------------------------

rdiff-backup now writes SHA1 sums into its mirror_metadata file for
all regular files, and checks them when restoring.

The above greatly increases the size of the mirror_metadata files, so
diff them for space efficiency, as suggested by Dean Gaudet.

Added two new comparison modes: full file (using the --compare-full or
--compare-full-at-time) or by hash (--compare-hash and